src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-39.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units s=m\")"
---
items:
  - loc: "#units s=m"
    locs:
      directive: "#units"
    options:
      - loc: s=m
        locs:
          option: s
          unit: m
        option: SecondaryDistanceUnit
        unit: Meters
    type: UnitsDirective
