src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-42.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units s=feet\")"
---
items:
  - loc: "#units s=feet"
    locs:
      directive: "#units"
    options:
      - loc: s=feet
        locs:
          option: s
          unit: feet
        option: SecondaryDistanceUnit
        unit: Feet
    type: UnitsDirective
