src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-46.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units a=d\")"
---
items:
  - loc: "#units a=d"
    locs:
      directive: "#units"
    options:
      - loc: a=d
        locs:
          option: a
          unit: d
        option: FrontsightAzimuthUnit
        unit: Degrees
    type: UnitsDirective
