src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-47.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units a=degrees\")"
---
items:
  - loc: "#units a=degrees"
    locs:
      directive: "#units"
    options:
      - loc: a=degrees
        locs:
          option: a
          unit: degrees
        option: FrontsightAzimuthUnit
        unit: Degrees
    type: UnitsDirective
