src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-48.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units a=g\")"
---
items:
  - loc: "#units a=g"
    locs:
      directive: "#units"
    options:
      - loc: a=g
        locs:
          option: a
          unit: g
        option: FrontsightAzimuthUnit
        unit: Grads
    type: UnitsDirective
