src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-49.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units a=grads\")"
---
items:
  - loc: "#units a=grads"
    locs:
      directive: "#units"
    options:
      - loc: a=grads
        locs:
          option: a
          unit: grads
        option: FrontsightAzimuthUnit
        unit: Grads
    type: UnitsDirective
